--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
         <a href = "#" class = "lli , lli2">اقرأ المزيد </a>
         </div>
     </header>
+    <section class="sec">
+    <div class="row">
+        <h2 >احصل علي طعام صحي &mdash;  وليس طعام السريع</h2>
+        <p class="text">Arnaudet, Martin L. and Mary Ellen Barrett. Paragraph Development: A Guide for Students of English. 2nd edition. Englewood Cliffs, NJ: Prentice Hall Regents, 1990.</p>
+        </div>
+        <div class = "row cards">
+           <div class="card">
+               <ion-icon name="infinite-outline"></ion-icon>
+            <h3>متاح علي مدار الساعة</h3>
+               <p> paragraphs consist of three parts: the topic sentence, body sentences, and the concluding or the bridge sentence to the next paragraph or section. Paragraphs show where the subdivisions of a research paper begin and end and, thus, help the reader see the organization of the essay and grasp its main points.</p>
+            </div>
+                       <div class="card">
+                           <ion-icon name="alarm-outline"></ion-icon>
+            <h3>جاهز في 20 دقيقة</h3>
+               <p>A paragraphs consist of three parts: the topic sentence, body sentences, and the concluding or the bridge sentence to the next paragraph or section. Paragraphs show where the subdivisions of a research paper begin and end and, thus, help the reader see the organization of the essay and grasp its main points.</p>
+            </div>
+                       <div class="card">
+                           <ion-icon name="nutrition-outline"></ion-icon>
+            <h3>100% صحي</h3>
+               <p>paragraphs consist of three parts: the topic sentence, body sentences, and the concluding or the bridge sentence to the next paragraph or section. Paragraphs show where the subdivisions of a research paper begin and end and, thus, help the reader see the organization of the essay and grasp its main points.</p>
+            </div>
+                       <div class="card">
+                           <ion-icon name="cart-outline"></ion-icon>
+            <h3>اطلب أي شئ</h3>
+               <p> paragraphs consist of three parts: the topic sentence, body sentences, and the concluding or the bridge sentence to the next paragraph or section. Paragraphs show where the subdivisions of a research paper begin and end and, thus, help the reader see the organization of the essay and grasp its main points.</p>
+            </div>
+        </div>
+    </section>
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </body>
 
 </html>
